syntax = "proto3";
package th2;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "th2/infra.proto";

option java_multiple_files = true;
option java_package = "com.exactpro.th2.eventstore.grpc";

message BatchId {
    string id = 1;
}

message EventId {
    BatchId batchId = 1;
    int64 index = 2;
}

message StoreEventRequest {
    reserved 1; // string eventId = 1;
    string eventName = 2;
    string eventType = 3;
    google.protobuf.Timestamp eventStartTimestamp = 4;
    google.protobuf.Timestamp eventEndTimestamp = 5;
    EventId parentEventId = 6;
    reserved 7; // string reportId = 7;
    bool success = 8;
    repeated MessageID attachedMessageIds = 9;
    bytes body = 10;
    EventId eventId = 11;
}

message Response {
    google.protobuf.StringValue error = 1;
    google.protobuf.StringValue id = 2;
}

service EventStoreService {
    rpc StoreEvent (StoreEventRequest) returns (Response);
}
